--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,6 +1,9 @@
 name: SonarQube analysis
 
 on:
+  push:
+    branches:
+      - master
   workflow_run:
     workflows: ["Build and Publish Docker image"]
     types:
@@ -21,13 +24,13 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: "11"
 
       - name: Analyze with SonarQube
         uses: SonarSource/sonarqube-scan-action@7295e71c9583053f5bf40e9d4068a0c974603ec8
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Token GitHub pour récupérer les informations des PRs
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}    # Jeton généré dans SonarQube (à ajouter dans les secrets GitHub)
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Token GitHub pour récupérer les informations des PRs
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} # Jeton généré dans SonarQube (à ajouter dans les secrets GitHub)
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }} # URL de l'instance SonarQube
         with:
           args: |
