--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -3,10 +3,10 @@ name: Snyk Security Analysis
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
   workflow_dispatch:
 
 permissions:
@@ -26,7 +26,7 @@ jobs:
       - name: Set up Snyk
         uses: snyk/actions/setup@v2
         with:
-          version: 'latest' # Spécifiez la version ou utilisez "latest"
+          version: "latest" # Spécifiez la version ou utilisez "latest"
 
       # Authentifier Snyk
       - name: Authenticate Snyk
