--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -3,7 +3,7 @@ name: SonarQube analysis
 on:
   push:
     branches:
-      - master
+      - main
   workflow_run:
     workflows: ["Build and Publish Docker image"]
     types:
