--- a/playbook.yml
+++ b/playbook.yml
@@ -9,12 +9,18 @@
 
   tasks:
     - name: Update & Upgrade packages
-      apt:
+      ansible.builtin.apt:
         upgrade: dist
         update_cache: yes
 
-    - name: Install Docker
-      apt:
+    - name: Remove conflicting containerd if present
+      ansible.builtin.apt:
+        name: containerd
+        state: absent
+      ignore_errors: yes
+
+    - name: Install Docker packages
+      ansible.builtin.apt:
         name: "{{ docker_packages }}"
         state: present
         update_cache: yes
@@ -26,13 +32,13 @@
         password: "{{ registry_token }}"
 
     - name: Create app directory
-      file:
+      ansible.builtin.file:
         path: "/home/{{ ansible_user }}/app"
         state: directory
         mode: "0755"
 
     - name: Deploy docker-compose.yml
-      template:
+      ansible.builtin.template:
         src: "/tmp/docker-compose.yml.j2"
         dest: "/home/{{ ansible_user }}/app/docker-compose.yml"
 
@@ -40,3 +46,11 @@
       community.docker.docker_compose_v2:
         project_src: "/home/{{ ansible_user }}/app"
         state: present
+
+    - name: Afficher l'IP publique de la VM
+      ansible.builtin.shell: "curl -s ifconfig.me"
+      register: vm_ip
+
+    - name: Print deployed frontend URL
+      ansible.builtin.debug:
+        msg: "Votre frontend est en ligne : http://{{ vm_ip.stdout }}:8080"
