Update playbook to change task name for APT cache update and remove unnecessary upgrade step

--- a/playbook.yml
+++ b/playbook.yml
@@ -8,9 +8,8 @@
       - docker-compose-plugin
 
   tasks:
-    - name: Update & Upgrade packages
+    - name: Update only APT cache
       ansible.builtin.apt:
-        upgrade: dist
         update_cache: yes
 
     - name: Remove conflicting containerd if present
