--- a/playbook.yml
+++ b/playbook.yml
@@ -3,23 +3,31 @@
   become: true
 
   vars:
+    docker_apt_packages:
+      - ca-certificates
+      - curl
+      - gnupg
+      - lsb-release
     docker_packages:
-      - docker.io
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+      - docker-buildx-plugin
       - docker-compose-plugin
 
   tasks:
-    - name: Update only APT cache
+    - name: Update APT cache
       ansible.builtin.apt:
         update_cache: yes
 
-    - name: Remove conflicting containerd if present
+    - name: Remove conflicting containerd (if any)
       ansible.builtin.apt:
         name: containerd
         state: absent
       ignore_errors: yes
 
-    - name: Wait for apt lock to be released
-      ansible.builtin.shell: |
+    - name: Wait for APT lock to be released
+      shell: |
         while fuser /var/lib/dpkg/lock >/dev/null 2>&1 || \
               fuser /var/lib/dpkg/lock-frontend >/dev/null 2>&1; do
           echo "Waiting for apt lock..."
@@ -27,11 +35,30 @@
         done
       changed_when: false
 
+    - name: Install prerequisite packages
+      ansible.builtin.apt:
+        name: "{{ docker_apt_packages }}"
+        state: present
+
+    - name: Add Docker GPG key
+      ansible.builtin.apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
+
+    - name: Add Docker APT repository
+      ansible.builtin.apt_repository:
+        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable
+        state: present
+        filename: docker
+
+    - name: Update APT cache after adding Docker repo
+      ansible.builtin.apt:
+        update_cache: yes
+
     - name: Install Docker packages
       ansible.builtin.apt:
         name: "{{ docker_packages }}"
         state: present
-        update_cache: yes
 
     - name: Docker login GHCR
       community.docker.docker_login:
@@ -55,7 +82,7 @@
         project_src: "/home/{{ ansible_user }}/app"
         state: present
 
-    - name: Afficher l'IP publique de la VM
+    - name: Get public IP
       ansible.builtin.shell: "curl -s ifconfig.me"
       register: vm_ip
 
