--- a/playbook.yml
+++ b/playbook.yml
@@ -3,11 +3,6 @@
   become: true
 
   vars:
-    docker_apt_packages:
-      - ca-certificates
-      - curl
-      - gnupg
-      - lsb-release
     docker_packages:
       - docker-ce
       - docker-ce-cli
@@ -16,42 +11,43 @@
       - docker-compose-plugin
 
   tasks:
-    - name: Update APT cache
+    - name: Update only APT cache
       ansible.builtin.apt:
         update_cache: yes
 
-    - name: Remove conflicting containerd (if any)
+    - name: Remove conflicting containerd if present
       ansible.builtin.apt:
         name: containerd
         state: absent
       ignore_errors: yes
 
-    - name: Wait for APT lock to be released
-      shell: |
-        while fuser /var/lib/dpkg/lock >/dev/null 2>&1 || \
-              fuser /var/lib/dpkg/lock-frontend >/dev/null 2>&1; do
-          echo "Waiting for apt lock..."
-          sleep 5
-        done
-      changed_when: false
-
-    - name: Install prerequisite packages
+    - name: Install required dependencies
       ansible.builtin.apt:
-        name: "{{ docker_apt_packages }}"
+        name:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - software-properties-common
+          - gnupg
+          - lsb-release
         state: present
+        update_cache: yes
 
     - name: Add Docker GPG key
-      ansible.builtin.apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
-        state: present
+      ansible.builtin.shell: |
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+      args:
+        creates: /usr/share/keyrings/docker-archive-keyring.gpg
 
-    - name: Add Docker APT repository
-      ansible.builtin.apt_repository:
-        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable
-        state: present
-        filename: docker
+    - name: Create Docker repo file
+      ansible.builtin.shell: |
+        echo \
+          "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
+          $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+      args:
+        executable: /bin/bash
 
-    - name: Update APT cache after adding Docker repo
+    - name: Update APT after Docker repo added
       ansible.builtin.apt:
         update_cache: yes
 
@@ -82,7 +78,7 @@
         project_src: "/home/{{ ansible_user }}/app"
         state: present
 
-    - name: Get public IP
+    - name: Afficher l'IP publique de la VM
       ansible.builtin.shell: "curl -s ifconfig.me"
       register: vm_ip
 
