Refactor playbook to improve Docker GPG key handling, streamline repository file creation, and ensure user directory paths are correctly set

--- a/playbook.yml
+++ b/playbook.yml
@@ -35,15 +35,14 @@
 
     - name: Add Docker GPG key
       ansible.builtin.shell: |
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
       args:
         creates: /usr/share/keyrings/docker-archive-keyring.gpg
 
     - name: Create Docker repo file
       ansible.builtin.shell: |
-        echo \
-          "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
-          $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+        echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
+        $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list
       args:
         executable: /bin/bash
 
@@ -64,18 +63,18 @@
 
     - name: Create app directory
       ansible.builtin.file:
-        path: "/home/{{ ansible_user }}/app"
+        path: "/home/{{ ansible_user | default('ubuntu') }}/app"
         state: directory
         mode: "0755"
 
     - name: Deploy docker-compose.yml
       ansible.builtin.template:
         src: "/tmp/docker-compose.yml.j2"
-        dest: "/home/{{ ansible_user }}/app/docker-compose.yml"
+        dest: "/home/{{ ansible_user | default('ubuntu') }}/app/docker-compose.yml"
 
     - name: Launch Docker Compose
       community.docker.docker_compose_v2:
-        project_src: "/home/{{ ansible_user }}/app"
+        project_src: "/home/{{ ansible_user | default('ubuntu') }}/app"
         state: present
 
     - name: Afficher l'IP publique de la VM
