--- a/playbook.yml
+++ b/playbook.yml
@@ -80,6 +80,11 @@
         src: "/tmp/docker-compose.yml.j2"
         dest: "/home/{{ ansible_user | default('ubuntu') }}/app/docker-compose.yml"
 
+    - name: Deploy nginx.conf
+      ansible.builtin.template:
+        src: "/tmp/nginx.conf.j2"
+        dest: "/home/{{ ansible_user | default('ubuntu') }}/app/nginx.conf"
+
     - name: Launch Docker Compose
       community.docker.docker_compose_v2:
         project_src: "/home/{{ ansible_user | default('ubuntu') }}/app"
