Refactor playbook to streamline Docker container management and improve service deployment

--- a/playbook.yml
+++ b/playbook.yml
@@ -46,6 +46,8 @@
           - software-properties-common
           - gnupg
           - lsb-release
+          - certbot
+          - python3-certbot-nginx
         state: present
         update_cache: yes
 
