--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,10 +9,37 @@ permissions:
 
 jobs:
   destroy-before-deploy:
-    uses: ./.github/workflows/destroy.yml  # Appel du workflow "destroy"
+    name: Destroy Previous Infra
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Init (Destroy Phase)
+        working-directory: terraform
+        run: terraform init
+
+      - name: Terraform Destroy
+        working-directory: terraform
+        run: |
+          terraform destroy -auto-approve \
+            -var="api_token=${{ secrets.API_TOKEN }}" \
+            -var="ssh_private_key=${{ secrets.SSH_PRIVATE_KEY }}" \
+            -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}" \
+            -var="username=${{ secrets.ANSIBLE_USER }}" \
+            -var="registry_username=${{ github.repository_owner }}" \
+            -var="registry_token=${{ secrets.REGISTRY_TOKEN }}" \
+            -var="cloudflare_api_token=${{ secrets.CLOUDFLARE_API_TOKEN }}" \
+            -var="cloudflare_zone_id=${{ secrets.CLOUDFLARE_ZONE_ID }}" \
+            -var="front_image_tag=ghcr.io/${{ github.repository_owner }}/breizhsport_front:infra"
 
   deploy:
-    needs: destroy-before-deploy  # Attend que la destruction soit faite
+    name: Deploy Frontend Infra
+    needs: destroy-before-deploy
     runs-on: ubuntu-latest
 
     steps:
