--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -1,7 +1,11 @@
 name: Destroy Frontend VM
 
 on:
-  workflow_call:  # Ce workflow pourra être appelé depuis un autre
+  workflow_call:       # Permet l'appel depuis deploy.yml
+  workflow_dispatch:   # Permet de lancer manuellement via GitHub UI
+
+permissions:
+  contents: read
 
 jobs:
   destroy:
@@ -21,6 +25,7 @@ jobs:
       - name: Terraform Destroy
         working-directory: terraform
         run: |
+          echo "Destruction des ressources"
           terraform destroy -auto-approve \
             -var="api_token=${{ secrets.API_TOKEN }}" \
             -var="ssh_private_key=${{ secrets.SSH_PRIVATE_KEY }}" \
@@ -31,3 +36,19 @@ jobs:
             -var="cloudflare_api_token=${{ secrets.CLOUDFLARE_API_TOKEN }}" \
             -var="cloudflare_zone_id=${{ secrets.CLOUDFLARE_ZONE_ID }}" \
             -var="front_image_tag=ghcr.io/${{ github.repository_owner }}/breizhsport_front:infra"
+
+      - name: Vérification post-destruction
+        working-directory: terraform
+        run: |
+          echo "Vérification que les ressources ont bien été supprimées"
+
+          VM_COUNT=$(terraform state list | grep warren_virtual_machine || true | wc -l)
+          DNS_COUNT=$(terraform state list | grep cloudflare_record || true | wc -l)
+
+          if [ "$VM_COUNT" -eq 0 ] && [ "$DNS_COUNT" -eq 0 ]; then
+            echo "Toutes les ressources ont bien été supprimées."
+          else
+            echo "Certaines ressources semblent encore présentes dans l'état Terraform :"
+            terraform state list
+            exit 1
+          fi
