Add repository dispatch trigger for frontend deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,8 @@ name: Deploy Frontend VM
 
 on:
   workflow_dispatch:
+  repository_dispatch:
+    types: [deploy-from-front]
 
 permissions:
   contents: read
