--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,12 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
 
+      - name: Create SSH private key file
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
       - name: Terraform Init (Destroy)
         working-directory: terraform
         run: terraform init
@@ -55,6 +61,12 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
 
+      - name: Create SSH private key file
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
       - name: Terraform Init (Apply)
         working-directory: terraform
         run: terraform init
@@ -74,4 +86,4 @@ jobs:
             -var="front_image_tag=ghcr.io/${{ github.repository_owner }}/breizhsport_front:infra"
 
       - name: Cleanup
-        run: rm -f terraform/id_rsa
+        run: rm -f ~/.ssh/id_rsa terraform/id_rsa
