--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,14 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
+      - name: Debug TF_API_TOKEN (masqué)
+        run: |
+          if [ -n "${{ secrets.TF_API_TOKEN }}" ]; then
+            echo "TF_API_TOKEN is set to: ***✅ present***"
+          else
+            echo "TF_API_TOKEN is set to: ***❌ missing***"
+          fi
+
       - name: Terraform Init (Destroy)
         working-directory: terraform
         run: terraform init
@@ -67,6 +75,14 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
+      - name: Debug TF_API_TOKEN (masqué)
+        run: |
+          if [ -n "${{ secrets.TF_API_TOKEN }}" ]; then
+            echo "TF_API_TOKEN is set to: ***✅ present***"
+          else
+            echo "TF_API_TOKEN is set to: ***❌ missing***"
+          fi
+
       - name: Terraform Init (Apply)
         working-directory: terraform
         run: terraform init
@@ -86,4 +102,5 @@ jobs:
             -var="front_image_tag=ghcr.io/${{ github.repository_owner }}/breizhsport_front:infra"
 
       - name: Cleanup
-        run: rm -f ~/.ssh/id_rsa terraform/id_rsa
+        run: |
+          rm -f ~/.ssh/id_rsa terraform/id_rsa
