Refactor Terraform deployment workflow to configure credentials and add TF_API_TOKEN debug step for improved visibility

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,11 +27,22 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
+      - name: Configure Terraform credentials
+        run: |
+          mkdir -p ~/.terraform.d
+          echo "{\"credentials\":{\"app.terraform.io\":{\"token\":\"${{ secrets.TF_API_TOKEN }}\"}}}" > ~/.terraform.d/credentials.tfrc.json
+
+      - name: Debug TF_API_TOKEN (masqué)
+        run: |
+          if [ -n "${{ secrets.TF_API_TOKEN }}" ]; then
+            echo "TF_API_TOKEN is set to: ***✅ present***"
+          else
+            echo "TF_API_TOKEN is set to: ***❌ missing***"
+          fi
+
       - name: Terraform Init (Destroy)
         working-directory: terraform
         run: terraform init
-        env:
-          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Destroy
         working-directory: terraform
@@ -46,8 +57,6 @@ jobs:
             -var="cloudflare_api_token=${{ secrets.CLOUDFLARE_API_TOKEN }}" \
             -var="cloudflare_zone_id=${{ secrets.CLOUDFLARE_ZONE_ID }}" \
             -var="front_image_tag=ghcr.io/${{ github.repository_owner }}/breizhsport_front:infra" || true
-        env:
-          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
 
   deploy:
     name: Deploy Frontend Infra
@@ -67,11 +76,22 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
+      - name: Configure Terraform credentials
+        run: |
+          mkdir -p ~/.terraform.d
+          echo "{\"credentials\":{\"app.terraform.io\":{\"token\":\"${{ secrets.TF_API_TOKEN }}\"}}}" > ~/.terraform.d/credentials.tfrc.json
+
+      - name: Debug TF_API_TOKEN (masqué)
+        run: |
+          if [ -n "${{ secrets.TF_API_TOKEN }}" ]; then
+            echo "TF_API_TOKEN is set to: ***✅ present***"
+          else
+            echo "TF_API_TOKEN is set to: ***❌ missing***"
+          fi
+
       - name: Terraform Init (Apply)
         working-directory: terraform
         run: terraform init
-        env:
-          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Apply
         working-directory: terraform
@@ -86,8 +106,6 @@ jobs:
             -var="cloudflare_api_token=${{ secrets.CLOUDFLARE_API_TOKEN }}" \
             -var="cloudflare_zone_id=${{ secrets.CLOUDFLARE_ZONE_ID }}" \
             -var="front_image_tag=ghcr.io/${{ github.repository_owner }}/breizhsport_front:infra"
-        env:
-          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
 
       - name: Cleanup
         run: |
