--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,14 +32,6 @@ jobs:
           mkdir -p ~/.terraform.d
           echo "{\"credentials\":{\"app.terraform.io\":{\"token\":\"${{ secrets.TF_API_TOKEN }}\"}}}" > ~/.terraform.d/credentials.tfrc.json
 
-      - name: Debug TF_API_TOKEN (masqué)
-        run: |
-          if [ -n "${{ secrets.TF_API_TOKEN }}" ]; then
-            echo "TF_API_TOKEN is set to: ***✅ present***"
-          else
-            echo "TF_API_TOKEN is set to: ***❌ missing***"
-          fi
-
       - name: Terraform Init (Destroy)
         working-directory: terraform
         run: terraform init
@@ -81,14 +73,6 @@ jobs:
           mkdir -p ~/.terraform.d
           echo "{\"credentials\":{\"app.terraform.io\":{\"token\":\"${{ secrets.TF_API_TOKEN }}\"}}}" > ~/.terraform.d/credentials.tfrc.json
 
-      - name: Debug TF_API_TOKEN (masqué)
-        run: |
-          if [ -n "${{ secrets.TF_API_TOKEN }}" ]; then
-            echo "TF_API_TOKEN is set to: ***✅ present***"
-          else
-            echo "TF_API_TOKEN is set to: ***❌ missing***"
-          fi
-
       - name: Terraform Init (Apply)
         working-directory: terraform
         run: terraform init
@@ -108,5 +92,4 @@ jobs:
             -var="front_image_tag=ghcr.io/${{ github.repository_owner }}/breizhsport_front:infra"
 
       - name: Cleanup
-        run: |
-          rm -f ~/.ssh/id_rsa terraform/id_rsa
+        run: rm -f ~/.ssh/id_rsa terraform/id_rsa
