Update front_image_tag variable to use 'master' tag for deployment consistency

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
             -var="registry_token=${{ secrets.REGISTRY_TOKEN }}" \
             -var="cloudflare_api_token=${{ secrets.CLOUDFLARE_API_TOKEN }}" \
             -var="cloudflare_zone_id=${{ secrets.CLOUDFLARE_ZONE_ID }}" \
-            -var="front_image_tag=ghcr.io/${{ github.repository_owner }}/breizhsport_front:infra" || true
+            -var="front_image_tag=ghcr.io/${{ github.repository_owner }}/breizhsport_front:master" || true
 
   deploy:
     name: Deploy Frontend Infra
@@ -88,7 +88,7 @@ jobs:
             -var="registry_token=${{ secrets.REGISTRY_TOKEN }}" \
             -var="cloudflare_api_token=${{ secrets.CLOUDFLARE_API_TOKEN }}" \
             -var="cloudflare_zone_id=${{ secrets.CLOUDFLARE_ZONE_ID }}" \
-            -var="front_image_tag=ghcr.io/${{ github.repository_owner }}/breizhsport_front:infra"
+            -var="front_image_tag=ghcr.io/${{ github.repository_owner }}/breizhsport_front:master"
 
       - name: Cleanup
         run: rm -f ~/.ssh/id_rsa terraform/id_rsa
